feat: added router delete and finished  docs
